@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.5.1 (pending)
 ==========================
 
+- Reliable ordering for lists of saved graph objects
 - Save selected tab and tab order when selected/moved
 - Fix auto-activate when the graph editor not visible
 - Layout tweaks for dimension spinbox on DTypeChooser
